--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@tanstack/react-query": "^4.12.0",
 		"axios": "^1.1.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"styled-components": "^5.3.6",
+		"web3": "^1.8.0"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.19.4",
@@ -27,6 +29,7 @@
 		"@testing-library/user-event": "^14.4.3",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@types/styled-components": "^5.1.26",
 		"@vitejs/plugin-react": "^2.1.0",
 		"husky": "^8.0.0",
 		"identity-obj-proxy": "^3.0.0",
