--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@tanstack/react-query": "^4.12.0",
 		"axios": "^1.1.3",
 		"react": "^18.2.0",
+		"react-content-loader": "^6.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.0",
 		"styled-components": "^5.3.6",
 		"web3": "^1.8.0"
 	},
