--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@netlify/functions": "^1.3.0",
 		"@tanstack/react-query": "^4.12.0",
 		"axios": "^1.1.3",
 		"react": "^18.2.0",
